deploy: aee266425f0960ac11010fda5cdb2e3c421ae804

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="/wasm-imageprocessing-benchmark/assets/f16965043a9db39096ecfb63f3f4ae39.a02f38e2.png">
+  <link rel="icon" type="image/png" href="/wasm-imageprocessing-benchmark/#/assets/f16965043a9db39096ecfb63f3f4ae39.a02f38e2.png">
   
 <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&family=Nunito+Sans:wght@200;400;600&display=swap" rel="stylesheet">
-<script type="module" crossorigin src="/wasm-imageprocessing-benchmark/assets/index.c17b4a56.js"></script>
-  <link rel="modulepreload" href="/wasm-imageprocessing-benchmark/assets/motion.43d40351.js">
-  <link rel="stylesheet" href="/wasm-imageprocessing-benchmark/assets/index.03e08aab.css">
+<script type="module" crossorigin src="/wasm-imageprocessing-benchmark/#/assets/index.c27247f1.js"></script>
+  <link rel="modulepreload" href="/wasm-imageprocessing-benchmark/#/assets/motion.43d40351.js">
+  <link rel="stylesheet" href="/wasm-imageprocessing-benchmark/#/assets/index.a6f96eb5.css">
 </head>
 <body>
   <div id="app"></div>
