スレッドサポート

--- a/benchmark/index.html
+++ b/benchmark/index.html
@@ -18,6 +18,8 @@
   <body>
     <script src="wasm/emscripten/bin/benchmark.js"></script>
     <script src="wasm/emscripten/bin/benchmark_simd.js"></script>
+    <script src="wasm/emscripten/bin/benchmark_threads.js"></script>
+    <script src="wasm/emscripten/bin/benchmark_simd_threads.js"></script>
     <script src="./index.js"></script>
     <div id="result"><p>チョット時間カカル・・・</p></div>
     <table id="table">
