--- a/index.html
+++ b/index.html
@@ -1,20 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="/wasm-imageprocessing-benchmark/assets/f16965043a9db39096ecfb63f3f4ae39.a02f38e2.png">
-  
-<link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&family=Nunito+Sans:wght@200;400;600&display=swap" rel="stylesheet">
-<script type="module" crossorigin src="/wasm-imageprocessing-benchmark/assets/index.47d25886.js"></script>
-  <link rel="modulepreload" href="/wasm-imageprocessing-benchmark/assets/motion.43d40351.js">
-  <link rel="stylesheet" href="/wasm-imageprocessing-benchmark/assets/index.03e08aab.css">
-</head>
-<body>
-  <div id="app"></div>
-  
-  
-
-</body>
+<html lang="ja">
+  <head>
+    <title>benchmark</title>
+    <meta http-equiv="origin-trial" data-origin="localhost" content="Aq3b0tw6HXidz3xT829S1OXc7i1Jxa0cNZnNcKCIrWZ7ERz+u0swp4Vm7ygMdO3ah4q0AqRd+OLXT21sK53DYQgAAABSeyJvcmlnaW4iOiJodHRwOi8vbG9jYWxob3N0OjgwMDAiLCJmZWF0dXJlIjoiV2ViQXNzZW1ibHlTaW1kIiwiZXhwaXJ5IjoxNjIzODAxNTk5fQ==">
+    <meta http-equiv="origin-trial" data-origin="ngork" content="AuX+27CyIPgWbkRIvZba5lDhwCZFhQHI+sv/vcXLWzhRff0CQ6HqDm4CWgPd09DBgWdQtBArErKD4ECMSc0NNQsAAABeeyJvcmlnaW4iOiJodHRwczovLzc4OTJjMWE2YWM1Yi5uZ3Jvay5pbzo0NDMiLCJmZWF0dXJlIjoiV2ViQXNzZW1ibHlTaW1kIiwiZXhwaXJ5IjoxNjIzODAxNTk5fQ==">
+    <style>
+      table {
+        border-collapse: collapse;
+      }
+      th, td {
+        border: solid 1px;
+      }
+      td {
+        text-align: right;
+      }
+    </style>
+  </head>
+  <body>
+    <script src="wasm/emscripten/bin/benchmark.js"></script>
+    <script src="wasm/emscripten/bin/benchmark_simd.js"></script>
+    <script src="wasm/emscripten/bin/benchmark_threads.js"></script>
+    <script src="wasm/emscripten/bin/benchmark_simd_threads.js"></script>
+    <script src="./index.js"></script>
+    <div id="result"><p>チョット時間カカル・・・</p></div>
+    <table id="table">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Duration[ms]</th>
+        </tr>
+      </thead>
+      <tbody id="tbody"></tbody>
+    </table>
+  </body>
 </html>
